ss_test.txt

> Task :eventDeploy
Not running deploy task, skipping commit

> Task :createVersionFile
createVersionFile called. Path C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot

> Task :spotlessInternalRegisterDependencies UP-TO-DATE
> Task :spotlessGroovyGradle UP-TO-DATE
> Task :spotlessGroovyGradleApply UP-TO-DATE
> Task :spotlessJava
> Task :spotlessJavaApply
> Task :spotlessJson UP-TO-DATE
> Task :spotlessJsonApply UP-TO-DATE
> Task :spotlessMisc UP-TO-DATE
> Task :spotlessMiscApply UP-TO-DATE
> Task :spotlessApply
> Task :compileJava
> Task :processResources NO-SOURCE
> Task :classes

> Task :compileTestJava FAILED
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:61: error: cannot find symbol
        new FlywheelIOSim("MARSIntake", IntakeConstants.GEAR_RATIO, 0.02);
                                                       ^
  symbol:   variable GEAR_RATIO
  location: class IntakeConstants
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:62: error: constructor MARSIntake in class MARSIntake cannot be applied to given types;
    intake = new MARSIntake(physicalIntakeSim, powerManager);
             ^
  required: FlywheelIO
  found:    FlywheelIOSim,MARSPowerManager
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:65: error: cannot find symbol
        new FlywheelIOSim("MARSShooter", ShooterConstants.BOTTOM_GEAR_RATIO, 0.05);
                                                         ^
  symbol:   variable BOTTOM_GEAR_RATIO
  location: class ShooterConstants
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:66: error: constructor MARSShooter in class MARSShooter cannot be applied to given types;
    shooter = new MARSShooter(physicalShooterSim, powerManager);
              ^
  required: FlywheelIO
  found:    FlywheelIOSim,MARSPowerManager
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:77: error: cannot find symbol
      MARSPhysicsWorld.getInstance().step(0.01);
                                    ^
  symbol:   method step(double)
  location: class MARSPhysicsWorld
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:92: error: cannot find symbol
      MARSPhysicsWorld.getInstance().step(0.01);
                                    ^
  symbol:   method step(double)
  location: class MARSPhysicsWorld
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:112: error: cannot find symbol
      MARSPhysicsWorld.getInstance().step(0.01);
                                    ^
  symbol:   method step(double)
  location: class MARSPhysicsWorld
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:125: error: cannot find symbol
      MARSPhysicsWorld.getInstance().step(0.01);
                                    ^
  symbol:   method step(double)
  location: class MARSPhysicsWorld
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:146: error: cannot find symbol
      MARSPhysicsWorld.getInstance().step(0.01);
                                    ^
  symbol:   method step(double)
  location: class MARSPhysicsWorld
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:151: error: cannot find symbol
    assertTrue(shooter.getVelocityRadsPerSec() > 100.0, "Shooter did not spin up for SCORE_HIGH");
                      ^
  symbol:   method getVelocityRadsPerSec()
  location: variable shooter of type MARSShooter
10 errors
Compilation Error!
GradleRIO detected this build failed due to a Compile Error (compileTestJava).
Check that all your files are saved, then scroll up in this log for more information.
[Incubating] Problems report is available at: file:///C:/Users/david/dev/robotics/frc/MARSLib/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:77: error: cannot find symbol
        MARSPhysicsWorld.getInstance().step(0.01);
                                      ^
    symbol:   method step(double)
    location: class MARSPhysicsWorld
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:92: error: cannot find symbol
        MARSPhysicsWorld.getInstance().step(0.01);
                                      ^
    symbol:   method step(double)
    location: class MARSPhysicsWorld
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:112: error: cannot find symbol
        MARSPhysicsWorld.getInstance().step(0.01);
                                      ^
    symbol:   method step(double)
    location: class MARSPhysicsWorld
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:125: error: cannot find symbol
        MARSPhysicsWorld.getInstance().step(0.01);
                                      ^
    symbol:   method step(double)
    location: class MARSPhysicsWorld
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:146: error: cannot find symbol
        MARSPhysicsWorld.getInstance().step(0.01);
                                      ^
    symbol:   method step(double)
    location: class MARSPhysicsWorld
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:151: error: cannot find symbol
      assertTrue(shooter.getVelocityRadsPerSec() > 100.0, "Shooter did not spin up for SCORE_HIGH");
                        ^
    symbol:   method getVelocityRadsPerSec()
    location: variable shooter of type MARSShooter
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:62: error: constructor MARSIntake in class MARSIntake cannot be applied to given types;
      intake = new MARSIntake(physicalIntakeSim, powerManager);
               ^
    required: FlywheelIO
    found:    FlywheelIOSim,MARSPowerManager
    reason: actual and formal argument lists differ in length
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:66: error: constructor MARSShooter in class MARSShooter cannot be applied to given types;
      shooter = new MARSShooter(physicalShooterSim, powerManager);
                ^
    required: FlywheelIO
    found:    FlywheelIOSim,MARSPowerManager
    reason: actual and formal argument lists differ in length
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:61: error: cannot find symbol
          new FlywheelIOSim("MARSIntake", IntakeConstants.GEAR_RATIO, 0.02);
                                                         ^
    symbol:   variable GEAR_RATIO
    location: class IntakeConstants
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSSuperstructureTest.java:65: error: cannot find symbol
          new FlywheelIOSim("MARSShooter", ShooterConstants.BOTTOM_GEAR_RATIO, 0.05);
                                                           ^
    symbol:   variable BOTTOM_GEAR_RATIO
    location: class ShooterConstants
  10 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
13 actionable tasks: 6 executed, 7 up-to-date
